YAML/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  labels:
    app: todo-mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-mongodb
  template:
    metadata:
      labels:
        app: todo-mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo
        command: ["mongod", "--bind_ip_all"]
        ports:
        - containerPort: 27017
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
        volumeMounts:
        - name: todo-mongo-vol
          mountPath: /data/db
      volumes:
      - name: todo-mongo-vol
        persistentVolumeClaim:
          claimName: todo-pvc
