YAML/server-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-service
spec:
  ports:
  - port: 5000 # application port
    targetPort: 5000 # container port
  selector:
    app: todo-server-app
  type: LoadBalancer
